# cpuminer

./: .gitignore  AUTHORS  CMakeLists.txt  CPUMiner.cpp  CPUs+_+8.txt  ChangeLog  Dockerfile  Document.html  LICENSE  LICENSE Anthony D Hunt  Makefile  Makefile.am  Makefile.in  NEWS  README  Readme.md  aclocal.m4  autogen.sh  compat.h  configure  configure.ac  cpu-miner.c  elist.h  example-cfg.json  gc3355.c  gc3355.h  gistfile1.txt  miner.h  minerd.1  mknsis.sh  neoscrypt.c  neoscrypt.h  neoscrypt_asm.S  nomacro.pl  scrypt-arm.S  scrypt-ppc.S  scrypt-x64.S  scrypt-x86.S  scrypt.c  sha2-arm.S  (+12 more)
.github/workflows/: docker-publish.yml
algorithms/: Makefile.am  genheader.sh
algorithms/example/: Makefile.am  plugin.c  plugin.h
algorithms/nist5/: Makefile.am  plugin.h  xcoin.c
algorithms/nscrypt/: plugin.h
algorithms/scrypt/: Makefile.am  plugin.h  scrypt-arm.S  scrypt-x64.S  scrypt-x86.S  scrypt.c
algorithms/sha256d/: Makefile.am  plugin.h  sha2-arm.S  sha2-x86.S  sha2.c
algorithms/x11/: Makefile.am  plugin.h  xcoin.c
algorithms/x11/x5/: compress.h  cubehash_sse2.c  cubehash_sse2.h  defs_x5.h  echo.c  luffa_for_sse2.h
algorithms/x11/x5/blake/sse41/: architectures  config.h  hash.c  implementors  rounds.h
algorithms/x11/x5/echo512/ccalik/aesni/: api.h  hash.c  hash_api.h  implementors  vperm.h
algorithms/x11/x5/vect128/: nist.c  nist.h  simd_iv.h  vector.c  vector.h
algorithms/x11/x6/: blake.c  bmw.c  brg_types.h  groestl.c  grsi-asm.h  grsi.c  grsn-asm.h  grsn.h  grso-asm.c  grso-asm.h  grso-asm2.h  grso.c  grso.h  grss.c  grss_api.h  grsv.c  grsv.h  jh_sse2_opt32.h  jh_sse2_opt64.h  keccak.c  skein.c  sph_blake.h  sph_bmw.h  sph_groestl.h  sph_jh.h  sph_keccak.h
algorithms/x11/x6/groestl/aesni/: README  api.h  brg_types.h  groestl-asm-aes.h  groestl-asm-avx.h  groestl-asm-vperm.h  groestl-intr-aes.h  groestl-intr-vperm.h  groestl-version.h  hash-groestl.c  hash-groestl.h  implementors
algorithms/x13/: Makefile.am  plugin.h
algorithms/x13/hash/: hamsi_helper.c
algorithms/x15/: Makefile.am  plugin.h
algorithms/x15/hash/: shabal.c  sph_shabal.h  sph_whirlpool.h  whirlpool.c
compat/: Makefile.am  Makefile.in
compat/jansson/: .gitignore  Makefile.am  Makefile.in  config.h
x5/: luffa_for_sse2.c
x5/blake/sse41/: api.h  hash.h
x5/echo512/ccalik/aesni/: architectures  hash.c  hash_api.h  sha3_common.h
x5/vect128/: compat.h
x6/: bitsliceaes.c  bitsliceaes.h  grsi.h  grsn.c  grso-asm2.c  grsotab.h  grstab.h  grsv-asm.h  sph_skein.h
x6/groestl/aesni/: groestl-intr-avx.h
x86_64/: .gitignore  Makefile.am  sha256_xmm_amd64.asm
